--- a/test/sample_ahbe.conf
+++ b/test/sample_ahbe.conf
@@ -1,7 +1,7 @@
-# S3FS: Sample ahbe_conf parameter file.
+# OSSFS: Sample ahbe_conf parameter file.
 #
 # This file is configuration file for additional header by extension(ahbe).
-# s3fs loads this file at starting.
+# ossfs loads this file at starting.
 #
 # Format:
 #  line                = [file suffix or regex] HTTP-header [HTTP-header-values]
