--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -1,5 +1,5 @@
 ######################################################################
-# s3fs - FUSE-based file system backed by Amazon S3
+# ossfs - FUSE-based file system backed by InspurCloud OSS
 #
 # Copyright 2007-2008 Randy Rizun <rrizun@gmail.com>
 #
@@ -17,5 +17,5 @@
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 ######################################################################
-dist_man1_MANS = man/s3fs.1
+dist_man1_MANS = man/ossfs.1
 
