--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,5 +1,5 @@
 ######################################################################
-# s3fs - FUSE-based file system backed by Amazon S3
+# ossfs - FUSE-based file system backed by InspurCloud OSS
 #
 # Copyright 2007-2008 Randy Rizun <rrizun@gmail.com>
 #
@@ -17,25 +17,25 @@
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 ######################################################################
-bin_PROGRAMS=s3fs
+bin_PROGRAMS=ossfs
 
 AM_CPPFLAGS = $(DEPS_CFLAGS)
 if USE_GNUTLS_NETTLE
   AM_CPPFLAGS += -DUSE_GNUTLS_NETTLE
 endif
 
-s3fs_SOURCES = s3fs.cpp s3fs.h curl.cpp curl.h cache.cpp cache.h string_util.cpp string_util.h s3fs_util.cpp s3fs_util.h fdcache.cpp fdcache.h common_auth.cpp s3fs_auth.h addhead.cpp addhead.h common.h
+ossfs_SOURCES = ossfs.cpp ossfs.h curl.cpp curl.h cache.cpp cache.h string_util.cpp string_util.h ossfs_util.cpp ossfs_util.h fdcache.cpp fdcache.h common_auth.cpp ossfs_auth.h addhead.cpp addhead.h common.h
 if USE_SSL_OPENSSL
-  s3fs_SOURCES += openssl_auth.cpp
+  ossfs_SOURCES += openssl_auth.cpp
 endif
 if USE_SSL_GNUTLS
-  s3fs_SOURCES += gnutls_auth.cpp
+  ossfs_SOURCES += gnutls_auth.cpp
 endif
 if USE_SSL_NSS
-  s3fs_SOURCES += nss_auth.cpp
+  ossfs_SOURCES += nss_auth.cpp
 endif
 
-s3fs_LDADD = $(DEPS_LIBS)
+ossfs_LDADD = $(DEPS_LIBS)
 
 noinst_PROGRAMS = test_string_util
 
